--- a/app/src/main/res/layout/dialog_cost_detail.xml
+++ b/app/src/main/res/layout/dialog_cost_detail.xml
@@ -1,6 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingStart="@dimen/space_horizontal"
+    android:paddingEnd="@dimen/space_horizontal"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--app:behavior_peekHeight="90dp"-->
+    <!--app:behavoir_hideable="true"-->
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/dialog_cost_detail_save_action"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/space_vertical"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="8dp"
+            android:src="@drawable/ic_baseline_check_24"
+            app:tint="@color/colorPrimary" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/dialog_cost_detail_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/space_horizontal"
+            android:layout_marginTop="@dimen/space_vertical"
+            android:layout_marginEnd="@dimen/space_horizontal"
+            android:layout_toStartOf="@+id/dialog_cost_detail_save_action"
+            android:layout_toEndOf="@+id/dialog_cost_detail_close_action"
+            android:gravity="center_horizontal"
+            android:hint="@string/all_title"
+            android:lines="1"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20sp" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/dialog_cost_detail_close_action"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="@dimen/space_vertical"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="6dp"
+            android:src="@drawable/ic_baseline_close_24"
+            app:tint="@color/colorHint" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/dialog_cost_detail_purchase_expense_currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/dialog_cost_detail_purchase_expense_container"
+            android:layout_alignParentStart="true"
+            android:textSize="18sp"
+            tools:text="ریال" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/dialog_cost_detail_purchase_expense_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="@dimen/space_horizontal"
+            android:layout_marginTop="@dimen/space_vertical"
+            android:layout_toEndOf="@+id/dialog_cost_detail_purchase_expense_currency"
+            android:gravity="center_horizontal"
+            android:hint="@string/expense_title"
+            app:boxBackgroundColor="@android:color/white"
+            app:placeholderTextColor="@color/colorAccent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/dialog_cost_detail_purchase_expense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:inputType="number"
+                android:lines="1"
+                android:textSize="20sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/dialog_cost_detail_purchase_date_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/space_vertical"
+        android:paddingBottom="@dimen/space_vertical">
+
+        <TextView
+            android:id="@+id/dialog_cost_detail_purchase_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textSize="20sp"
+            tools:text="۱۳۹۹/۰۵/۰۴    ۱۸:۴۴" />
+
+        <TextView
+            android:id="@+id/dialog_cost_detail_purchase_date_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/dialog_cost_detail_purchase_date"
+            android:text="@string/all_purchased_time_title" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_vertical">
+
+        <TextView
+            android:id="@+id/dialog_cost_detail_stock_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:text="@string/cost_detail_stock_title" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/dialog_cost_detail_stock_container"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="@dimen/space_horizontal"
+            android:layout_toStartOf="@+id/dialog_cost_detail_stock_title"
+            app:boxBackgroundColor="@android:color/white">
+
+            <AutoCompleteTextView
+                android:id="@+id/dialog_cost_detail_stock_dropdown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/dialog_cost_detail_source_dropdown_title"
+                android:inputType="none" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </RelativeLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/dialog_cost_detail_description_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_vertical"
+        android:hint="@string/all_description_title"
+        app:boxBackgroundColor="@android:color/white">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+</LinearLayout>
