--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorText">#212121</color>
+    <color name="colorHint">#FF808080</color>
     <color name="main_add_color_container_background">#FFFFFF</color>
     <color name="main_bottom_sheet_background">#FFFFFF</color>
 </resources>
