--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <item name="android:textColorHint">@color/colorHint</item>
+        <item name="android:textColor">@color/colorText</item>
+
         <item name="fontFamily">@font/iran_sans_family</item>
+    </style>
+
+    <style name="AppTheme.BottomSheet" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
+
     </style>
 
 </resources>
