--- a/app/src/main/res/layout/layout_password_recovery.xml
+++ b/app/src/main/res/layout/layout_password_recovery.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="320dp"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:viewBindingIgnore="true"
     app:cardCornerRadius="10dp">
 
     <LinearLayout
@@ -34,7 +36,9 @@
             android:hint="@string/all_email_title">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/layout_password_recovery_input"
                 android:layout_width="match_parent"
+                android:inputType="textEmailAddress"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
