--- a/app/src/main/res/layout/layout_password_recovery_step_two.xml
+++ b/app/src/main/res/layout/layout_password_recovery_step_two.xml
@@ -34,7 +34,8 @@
             android:id="@+id/layout_password_recovery_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:maxLength="4" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
