--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+    <item
+        android:id="@+id/main_bottombar_report_item"
+        android:enabled="true"
+        android:icon="@drawable/ic_baseline_assignment_24"
+        android:title="@string/main_report_title" />
+    <item
+        android:id="@+id/main_bottombar_income_item"
+        android:enabled="true"
+        android:icon="@drawable/ic_baseline_vertical_align_bottom_24"
+        android:title="@string/main_income_title" />
     <item
         android:id="@+id/main_bottombar_cost_item"
         android:enabled="true"
@@ -8,15 +19,9 @@
         android:title="@string/main_cost_title" />
 
     <item
-        android:id="@+id/main_bottombar_income_item"
+        android:id="@+id/main_bottombar_stock_item"
         android:enabled="true"
-        android:icon="@drawable/ic_baseline_vertical_align_bottom_24"
-        android:title="@string/main_income_title" />
-
-    <item
-        android:id="@+id/main_bottombar_report_item"
-        android:enabled="true"
-        android:icon="@drawable/ic_baseline_assignment_24"
-        android:title="@string/main_report_title" />
+        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
+        android:title="@string/all_stocks_title" />
 
 </menu>
