--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryLight">#4D008577</color>
+    <color name="colorPrimaryLightDimmed">#11008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#8eacbb</color>
     <color name="colorText">#212121</color>
     <color name="colorHint">#FF808080</color>
     <color name="main_add_color_container_background">#FFFFFF</color>
