--- a/app/src/main/res/layout/dialog_add_stock.xml
+++ b/app/src/main/res/layout/dialog_add_stock.xml
@@ -63,6 +63,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/dialog_add_stock_name_input"
             android:layout_width="match_parent"
+            android:maxLines="1"
+            android:singleLine="true"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,8 +78,8 @@
         android:hint="@string/currency"
         android:lines="1"
         android:maxLength="10"
-        android:maxLines="1"
         android:singleLine="true"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@+id/dialog_add_stock_name_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_add_stock_appbar" />
