--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:alpha="0.4"
-    android:background="@color/colorPrimaryLight">
+    android:layout_width="260dp"
+    android:layout_height="180dp"
+    android:layout_gravity="center"
+    app:cardBackgroundColor="@color/colorPrimaryLightDimmed"
+    app:cardCornerRadius="10dp">
 
-    <ProgressBar
-        android:id="@+id/dialog_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="180dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/dialog_progress_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/dialog_progress"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dimen_thirty_two"
-        app:fontFamily="@font/iran_sans_medium"
-        tools:text="در حال بارگذاری" />
+        <ProgressBar
+            android:id="@+id/dialog_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/dialog_progress_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dialog_progress"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            app:fontFamily="@font/iran_sans_medium"
+            tools:text="در حال بارگذاری" />
+
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
