--- a/app/src/main/res/layout/fragment_fin_list.xml
+++ b/app/src/main/res/layout/fragment_fin_list.xml
@@ -20,9 +20,9 @@
         android:id="@+id/fragment_cost_list_remaining_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginTop="@dimen/space_vertical"
         android:layout_marginEnd="24dp"
-        android:text="@string/all_fund_remaining_title_coloned"
         app:fontFamily="@font/iran_sans_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_cost_list_sum" />
@@ -58,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:visibility="gone"
         android:layout_marginTop="2dp"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
@@ -68,6 +69,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/fragment_cost_list_remaining_currency"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/space_horizontal"
@@ -85,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_vertical"
         android:layout_marginEnd="@dimen/space_horizontal"
-        android:text="@string/last_20_costs_title"
+        android:text="@string/today_cost"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_cost_list_remaining" />
