--- a/app/src/main/res/layout/layout_stock_add_button.xml
+++ b/app/src/main/res/layout/layout_stock_add_button.xml
@@ -7,6 +7,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
+    app:cardCornerRadius="0dp"
     app:contentPaddingBottom="@dimen/space_vertical"
     app:contentPaddingLeft="@dimen/space_horizontal"
     app:contentPaddingRight="@dimen/space_horizontal"
