--- a/app/src/main/res/layout/layout_stock_item.xml
+++ b/app/src/main/res/layout/layout_stock_item.xml
@@ -7,6 +7,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
+    app:cardCornerRadius="0dp"
     app:contentPaddingBottom="8dp"
     app:contentPaddingLeft="16dp"
     app:contentPaddingRight="8dp"
@@ -20,6 +21,7 @@
             android:id="@+id/layout_stock_item_order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/textColorHint"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,14 +52,14 @@
 
         <TextView
             android:id="@+id/layout_stock_default"
-            android:background="@drawable/border"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:padding="4dp"
             android:text="@string/all_default_title"
             android:textColor="@color/textColorHint"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="12sp"
-            android:padding="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
